--- a/basics/Implnheritence/app/src/main/res/values/strings.xml
+++ b/basics/Implnheritence/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="student">Student</string>
     <string name="musician">Musician</string>
     <string name="teacher">Teacher</string>
+    <string name="cat">Cat</string>
 </resources>
